Update 'ckstotebj-python' component image to: quay.io/rhtap_qe/rhtap-qe-python:26df24736cf9f2651ff109f754c86cd33f24d141@sha256:fd3249b4f5ce473a452641bed1320309c08bfa0a8a45d6012eb9da25ddd650d1

--- a/components/ckstotebj-python/overlays/development/deployment-patch.yaml
+++ b/components/ckstotebj-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: ckstotebj-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-python:26df24736cf9f2651ff109f754c86cd33f24d141@sha256:fd3249b4f5ce473a452641bed1320309c08bfa0a8a45d6012eb9da25ddd650d1
+          name: container-image
